--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     </div>
     <footer>
       <ul>
-        <li><a href="https://github.com/weblabtutorial">github.com/weblabtutorial</a></li>
-        <li><a href="https://weblabtutorial.github.io"> weblabtutorial.github.io </a></li>
+        <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F566609196873730694%2F&psig=AOvVaw34Rq2Zem_zCTkN31mQzb4X&ust=1633091340403000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKjztLzZpvMCFQAAAAAdAAAAABAg">click here for a photo of a rabbit</a></li>
+        <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.britannica.com%2Fstory%2Fwhats-the-difference-between-a-frog-and-a-toad&psig=AOvVaw2nksOHlnJ8UsClVVkDViwu&ust=1633091385340000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCID70tPZpvMCFQAAAAAdAAAAABAD"> </a>click here for a photo of a frog</li>
       </ul>
     </footer>
   </body>
