--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,12 @@ body {
 h1 {
  font-size: 3em;
  font-family:'Helvetica', 'Arial', 'Sans-Serif';
+ color: red;
 }
 p {
  font-size: 1.5em;
  line-height: 1.4em;
- color: #333;
+ color: orange;
 }
 footer {
  border-top: 1px solid #d5d5d5;
