--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,8 @@ footer {
  font-size: .8em;
 }
 nav ul, footer ul {
- font-family:'Helvetica', 'Arial', 'Sans-Serif';
+ font-family:'Arial';
+ text-align: centre;
  padding: 0px;
  list-style: none;
  font-weight: bold;
