--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
  margin: 60px auto;
  width: 70%;
- background-colour: lightblue;
+ background-color: lightblue;
 }
 h1 {
  text-align: centre;
