--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -4,13 +4,15 @@ body {
 }
 h1 {
  font-size: 3em;
- font-family:'comic-sans', 'Sans-Serif';
- color: green;
+ font-family:'Arial';
+ color: red;
+ text-align: center; 
 }
 p {
  font-size: 1.5em;
  line-height: 1.4em;
- color: blue;
+ color: red;
+ text align: center;
 }
 footer {
  border-top: 1px solid #d5d5d5;
