--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -12,7 +12,7 @@ p {
  font-size: 1.5em;
  line-height: 1.4em;
  color: red;
- text align: center;
+ text-align: center;
 }
 footer {
  border-top: 1px solid #d5d5d5;
