--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -4,12 +4,13 @@ body {
 }
 h1 {
  font-size: 3em;
- font-family:'Arial';
+ font-family:"Arial";
  color: red;
  text-align: center; 
 }
 p {
  font-size: 1.5em;
+ font-family: "Arial";
  line-height: 1.4em;
  color: red;
  text-align: center;
