--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -33,10 +33,11 @@ nav ul li, footer ul li {
 }
 a {
  text-decoration: none;
- color: #999;
+ color: red;
 }
 a:hover {
- text-decoration: underline;
+ color: blue;
+ 
 }
 ul.posts { 
  margin: 20px auto 40px; 
